# ros2_vitals

./: .gitignore  README.md
ros2_vitals/: CMakeLists.txt  package.xml
ros2_vitals/config/: defaults.yaml  vitals-daemon.service
ros2_vitals/launch/: collector.launch.py
ros2_vitals/ros2_vitals/: __init__.py  bridge_node.py  collector_node.py  daemon.py
ros2_vitals/ros2_vitals/collectors/: __init__.py  disk_collector.py  ebpf_net_collector.py  gpu_collector.py  net_stats_collector.py  network_collector.py  process_collector.py  system_collector.py  tcp_stats_collector.py  zenoh_network.py
ros2_vitals/ros2_vitals/terminal_ui/: __init__.py  app.py
ros2_vitals/ros2_vitals/utils/: __init__.py  rate_calculator.py
ros2_vitals/scripts/: bridge  collector  daemon  monitor
ros2_vitals_msgs/: CMakeLists.txt  package.xml
ros2_vitals_msgs/msg/: ChildProcessStatus.msg  DiskStatus.msg  GpuStatus.msg  NetworkInterface.msg  ProcessStatus.msg  SystemStatus.msg
ros2_vitals_msgs/srv/: KillProcess.srv
rqml_vitals/: CMakeLists.txt  package.xml  rqml_plugins.yaml.in
rqml_vitals/qml/: SystemMonitor.qml
rqml_vitals/qml/elements/: HostCard.qml  UsageBar.qml
rqml_vitals/qml/interfaces/: VitalsInterface.qml
