<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqml_vitals</name>
  <version>0.1.0</version>
  <description>RQML plugin for ROS 2 Vitals system monitor visualization</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rqml_core</depend>
  <depend>ros2_vitals_msgs</depend>

  <exec_depend>qml6-module-qtquick-controls</exec_depend>
  <exec_depend>qml6-module-qtquick-layouts</exec_depend>
  <exec_depend>qml6_ros2_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
